--- a/2024/bin/dune
+++ b/2024/bin/dune
@@ -22,3 +22,8 @@
  (public_name day05)
  (name day05)
  (libraries common))
+
+(executable
+ (public_name day06)
+ (name day06)
+ (libraries common))
