--- a/2024/bin/dune
+++ b/2024/bin/dune
@@ -27,3 +27,8 @@
  (public_name day06)
  (name day06)
  (libraries common))
+
+(executable
+ (public_name day07)
+ (name day07)
+ (libraries common))
