--- a/2024/bin/dune
+++ b/2024/bin/dune
@@ -32,3 +32,8 @@
  (public_name day07)
  (name day07)
  (libraries common))
+
+(executable
+ (public_name day08)
+ (name day08)
+ (libraries common))
