--- a/2024/bin/dune
+++ b/2024/bin/dune
@@ -42,3 +42,8 @@
  (public_name day09)
  (name day09)
  (libraries common))
+
+(executable
+ (public_name day10)
+ (name day10)
+ (libraries common))
