--- a/2024/bin/dune
+++ b/2024/bin/dune
@@ -47,3 +47,8 @@
  (public_name day10)
  (name day10)
  (libraries common))
+
+(executable
+ (public_name day11)
+ (name day11)
+ (libraries common))
